sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:4: error: not found: value fin
  var debut=0;fin=getNombreValeurs()-2
              ^AlgCocktailSort2:7: error: not found: value fin
  for(k<-debut to fin) {
                  ^AlgCocktailSort2:8: error: not found: value i
    if (!plusPetit(i,i+1)) {
                   ^AlgCocktailSort2:8: error: not found: value i
    if (!plusPetit(i,i+1)) {
                     ^AlgCocktailSort2:9: error: not found: value i
      echange(i,i+1)
              ^AlgCocktailSort2:9: error: not found: value i
      echange(i,i+1)
                ^AlgCocktailSort2:10: error: not found: value fin
      fin-=1
      ^AlgCocktailSort2:13: error: not found: value fin
  for (j<-fin to debut by -1) {
          ^